[tool.poetry]
name = "llm-qd"
version = "0.1.0"
description = ""
authors = ["itsdawei <dhlee@usc.edu>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
# ribs = {extras = ["visualize"], version = "0.6.4"}
# fire = "^0.5.0"
# scipy="^1.13.0"
# dask = "^2024.10.0"
# distributed = "^2024.10.0"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"
torch = "^2.5.0"
ipykernel = "^6.29.5"
datasets = "^3.0.2"
ipywidgets = "^8.1.5"
openai = "^1.52.1"
logdir = "^0.13.0"
pandas = "^2.2.3"
codebleu = "^0.7.0"
tree-sitter-python = "0.21"
seaborn = "^0.13.2"
ribs = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
